# mirai

./: .gitignore  CLAUDE.md  README.md  justfile
.claude/skills/commit/: SKILL.md
.claude/skills/opentofu/: SKILL.md
.github/workflows/: _deploy-app.yml  _deploy-frontend.yml  _deploy-image.yml  _deploy-infrastructure.yml  deploy.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_users.py  0001_initial_schema.py  0002_create_biomarker_tables.py  0003_align_constraint_names.py  0004_lab_upload_id_nullable.py  0005_lab_upload_fk_set_null.py  0006_lab_upload_review_lifecycle.py  0007_create_draft_biomarker_measurements.py  0007_create_draft_measurements.py  0008_lab_upload_content_hash.py  0009_require_measured_at.py
backend/scripts/: export_openapi.py
backend/src/mirai_api/: main.py
backend/src/mirai_api/biomarkers/: models.py  router.py
backend/src/mirai_api/core/: config.py  db.py  deps.py  enums.py  security.py
backend/src/mirai_api/integrations/: gcs.py
backend/src/mirai_api/lab_uploads/: models.py  parsing.py  router.py  schemas.py  service.py
backend/src/mirai_api/models/: __init__.py  base.py  biomarker.py  biomarker_measurement.py  draft_biomarker_measurement.py  draft_measurement.py  lab_upload.py  user.py
backend/src/mirai_api/repositories/: biomarkers.py  draft_biomarker_measurements.py  draft_measurements.py  lab_uploads.py
backend/src/mirai_api/routers/: biomarkers.py  health.py  lab_uploads.py  me.py
backend/src/mirai_api/schemas/: biomarkers.py  lab_uploads.py
backend/src/mirai_api/services/: biomarkers.py  lab_parsing.py  lab_uploads.py  storage.py  tasks.py
backend/src/mirai_api/users/: models.py  router.py  schemas.py
backend/tests/: conftest.py  test_biomarker_service.py  test_biomarkers.py  test_lab_parsing.py  test_lab_upload_service.py  test_lab_uploads.py  test_me.py
docs/: backend.md  description.md  frontend.md  stack.md
frontend/: .env  .env.example  .gitignore  index.html  openapi-ts.config.ts  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: index.css  main.tsx  routeTree.gen.ts
frontend/src/client/: client.gen.ts  index.ts  sdk.gen.ts  types.gen.ts
frontend/src/components/: add-data-dialog.tsx  api-error-alert.tsx  biomarker-select.tsx  empty-state.tsx  page.tsx  query-pane.tsx  reports-list.tsx  table-skeleton.tsx
frontend/src/lib/: api.ts  lab-uploads.ts  utils.ts
frontend/src/routes/: __root.tsx  about.tsx  biomarkers.tsx  body.tsx  index.tsx  insights.tsx  interventions.tsx  lifestyle.tsx  omics.tsx  physiology.tsx  reports.tsx  sources.$uploadId.review.tsx  (+2 more)
infra/opentofu/: .gitignore  README.md
infra/scripts/: 01_bootstrap_github_trust.sh  02_bootstrap_db_owner.sh  03_seed_secret.sh
scripts/: 00_bootstrap_state.sh  01_bootstrap_github_trust.sh  bootstrap_ci.sh  bootstrap_state.sh
(+41 files in other folders)
