[project]
name = "mirai-api"
version = "0.1.0"
description = "Mirai backend API — FastAPI on Cloud Run."
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.138",
    "uvicorn[standard]>=0.35",
    "sqlalchemy>=2.0",
    "pg8000>=1.31",
    "cloud-sql-python-connector[pg8000]>=1.18",
    "pydantic-settings>=2.7",
    "pyjwt[crypto]>=2.10",
    "alembic>=1.18",
    "pydantic-ai-slim[anthropic]>=2.5.1",
    "anthropic>=0.116.0",
    "google-cloud-storage>=3.12.0",
    "python-multipart>=0.0.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mirai_api"]

# Alembic reads [tool.alembic] natively (1.16+); no alembic.ini.
[tool.alembic]
script_location = "%(here)s/alembic"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
